@@ -7,8 +7,8 @@ import star.tratto.data.OracleDatapoint;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import static star.tratto.util.JavaParserUtils.getMethodDeclaration;
-import static star.tratto.util.JavaParserUtils.getReturnTypeOfExpression;
+import static star.tratto.util.javaparser.JavaParserUtils.getMethodDeclaration;
+import static star.tratto.util.javaparser.JavaParserUtils.getReturnTypeOfExpression;
 
 /**
  * Forbid "Arrays" if nor methodResultID or some method argument is an array.
@@ -37,7 +37,7 @@ public class NoArraysRestriction extends SingleTokenRestriction {
         MethodDeclaration methodDeclaration = getMethodDeclaration(oracleDatapoint.getMethodSourceCode());
         boolean methodResultIDIsArray = methodDeclaration != null && !methodDeclaration.getType().isVoidType() &&
                 getReturnTypeOfExpression("methodResultID", oracleDatapoint).getValue1().contains("[]");
-        List<String> methodArgumentsClasses = oracleDatapoint.getTokensMethodArguments().stream().map(Triplet::getValue2).collect(Collectors.toList());
+        List<String> methodArgumentsClasses = oracleDatapoint.getTokensMethodArguments().stream().map(Triplet::getValue2).toList();
 
         return !methodResultIDIsArray && methodArgumentsClasses.stream().noneMatch(c -> c.contains("[]"));
     }
