@@ -12,7 +12,7 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static star.tratto.oraclegrammar.custom.Splitter.split;
-import static star.tratto.util.JavaParserUtils.getReturnTypeOfExpression;
+import static star.tratto.util.javaparser.JavaParserUtils.getReturnTypeOfExpression;
 import static star.tratto.util.StringUtils.compactExpression;
 
 /**
@@ -25,7 +25,7 @@ public class NoBitwiseNegateOperatorRestriction extends SingleTokenRestriction {
     private static final List<String> disablingPreviousTokens = Stream.concat(
             Tokens.RULES_TOKENS.get("BitwiseLogicalOperator").stream(),
             Tokens.RULES_TOKENS.get("BitwiseShiftOperator").stream()
-    ).collect(Collectors.toList());
+    ).toList();
 
     private NoBitwiseNegateOperatorRestriction() {
         this.restrictedToken = "~";
